force-app/main/default/objects/TempTest__Test_Object__c/fields/TempTest__Checkbox10__c.field-meta.xml
<CustomField>
    <fullName>TempTest__Checkbox10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox10</label>
    <type>Checkbox</type>
</CustomField>