force-app/main/default/objects/TempTest__Test_Object__c/fields/TempTest__Checkbox12__c.field-meta.xml
<CustomField>
    <fullName>TempTest__Checkbox12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox12</label>
    <type>Checkbox</type>
</CustomField>