force-app/main/default/objects/TempTest__Test_Object__c/fields/TempTest__Checkbox13__c.field-meta.xml
<CustomField>
    <fullName>TempTest__Checkbox13__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox13</label>
    <type>Checkbox</type>
</CustomField>