force-app/main/default/objects/TempTest__Test_Object__c/fields/TempTest__Checkbox9_Updated__c.field-meta.xml
<CustomField>
    <fullName>TempTest__Checkbox9_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox9 Updated</label>
    <type>Checkbox</type>
</CustomField>