force-app/main/default/objects/TempTest__Test_Object__c/recordTypes/TempTest__New.recordType-meta.xml
<RecordType>
    <fullName>TempTest__New</fullName>
    <active>true</active>
    <label>New</label>
</RecordType>