force-app/main/default/objects/TempTest__Test_Object__c/recordTypes/TempTest__Test_Object_Record_Type2.recordType-meta.xml
<RecordType>
    <fullName>TempTest__Test_Object_Record_Type2</fullName>
    <active>true</active>
    <description>test</description>
    <label>Test Object Record Type2</label>
</RecordType>