force-app/main/default/objects/TempTest__Test_Object__c/recordTypes/TempTest__TestObject_RecordType.recordType-meta.xml
<RecordType>
    <fullName>TempTest__TestObject_RecordType</fullName>
    <active>true</active>
    <label>TestObject RecordType</label>
</RecordType>